tests/ui/cve_2022_23639/cve_2022_23639.stderr
error: it is unsound to cast between `u64` and `AtomicU64`
  --> tests/ui/cve_2022_23639/cve_2022_23639.rs:63:28
   |
LL |         let a = unsafe { &*(self.value.get() as *const AtomicU64) };
   |                            ^----------------^^^^^^^^^^^^^^^^^^^^^
   |                            ||
   |                            |u64 created here
   |                            casted here
   |
   = note: the alignment of `u64` is smaller than `AtomicU64` on many 32-bits platforms
   = note: `#[deny(rpl::unsound_cast_between_u64_and_atomic_u64)]` on by default

error: aborting due to 1 previous error

